--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "chareasy/lark-api",
     "description": "飞书api",
-    "type": "library",
     "license": "MIT",
     "autoload": {
         "psr-4": {
@@ -16,6 +15,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "guzzlehttp/guzzle": "^7.4"
+        "php": "^7.4|^8.0",
+        "guzzlehttp/guzzle": "^7.4",
+        "ext-json": "*"
     }
 }
