--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "php": "^7.4|^8.0",
         "guzzlehttp/guzzle": "^7.4",
         "ext-json": "*"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.8"
     }
 }
